--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
-    <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest">
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@jpebriant" />
-    <meta name="twitter:creator" content="@jpebriant" />
-    <meta property="og:url" content="https://waktu.my.id/juripebrianto-link" />
-    <meta property="og:title" content="Juri Pebrianto Website" />
-    <meta property="og:description" content="Juri Pebrianto Website Portofolio and Curuculum Vitae" />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon/favicon-32x32.png" />
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Juri Pebrianto Website Portofolio and Curuculum Vitae" />
-    <title>Juri Pebrianto Website</title>
-  </head>
-  <body style="padding-top: 4.5rem;">
-    <noscript>Website ini harus mengaktifkan javaScript.</noscript>
-    <div id="root"></div>
-  </body>
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@jpebriant" />
+  <meta name="twitter:creator" content="@jpebriant" />
+  <meta property="og:url" content="https://waktu.my.id/juripebrianto-link" />
+  <meta property="og:title" content="Juri Pebrianto Website" />
+  <meta property="og:description" content="Juri Pebrianto Website Portofolio and Curuculum Vitae" />
+  <meta property="og:image" content="%PUBLIC_URL%/favicon/favicon-32x32.png" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Juri Pebrianto Website Portofolio and Curuculum Vitae" />
+  <title>Juri Pebrianto Website</title>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q4BT33ZMLM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-Q4BT33ZMLM');
+  </script>
+</head>
+
+<body style="padding-top: 4.5rem;">
+  <noscript>Website ini harus mengaktifkan javaScript.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
